feat: Zonos 고정 화자 구현 및 벤치마크 결과 추가
주요 변경사항:
- Zonos: 고정 화자(seed=42) 구현으로 일관된 목소리 생성
- 벤치마크: gTTS/MeloTTS 5회 반복 테스트 완료
- 문서: 리소스 분석, 최종 비교, 간단 요약 추가
- .gitignore: Cursor 관련 파일 및 출력 오디오 제외

삭제:
- Cursor 작업 문서 (.cursorrules, PLAN.md, SPEC.md, TASKS.md)
- 개발 과정 파일들 제외

추가/수정:
- docs/QUICK_SUMMARY.md: 모델별 간단 비교표
- docs/RESOURCE_ANALYSIS.md: CPU/GPU/메모리 리소스 분석
- docs/FINAL_TTS_COMPARISON.md: 최종 TTS 비교
- models/zonos.py: 고정 화자 구현 (torch.manual_seed)
- results/: 벤치마크 결과 CSV 파일

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,16 @@ env/
 *.swo
 *~
 
+# Cursor
+.cursorrules
+.cursor/
+.cursorignore
+
+# Cursor project planning docs (for development only)
+docs/PLAN.md
+docs/SPEC.md
+docs/TASKS.md
+
 # OS
 .DS_Store
 Thumbs.db
@@ -51,9 +61,9 @@ Thumbs.db
 .cache/huggingface/
 .cache/modelscope/
 
-# Local data (optional - uncomment if you want to exclude)
-# data/output/
-# data/input/prompts/*.wav
+# Local data (generated audio files)
+data/output/
+data/input/prompts/*.wav
 
 # Test results (optional - uncomment if you want to exclude)
 # results/
@@ -63,6 +73,9 @@ Thumbs.db
 *.temp
 temp/
 tmp/
+
+# Third-party repositories
+Zonos/
 
 # Logs
 *.log
